name:                hanabi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hanabi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hanabi
                     , Hanabi.Types
                     , Hanabi.Repl
                     , Hanabi.Transitions
                     , Hanabi.Print
                     , Hanabi.Game
                     , Hanabi.Client
                     , Hanabi.Client.Messaging
                     , Hanabi.Client.Cli
                     , Hanabi.Logging
                     , Hanabi.Client.Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , random-shuffle
                     , containers >= 0.5.6.2
                     , lens
                     , text >= 1.2.2.1
                     , bytestring
                     , monad-logger
                     , transformers
                     , QuickCheck
                     , unordered-containers 
                     , websockets
                     , async
                     , directory
                     , escape-artist
                     , string-conversions
  default-language:    Haskell2010

executable hanabi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hanabi
  default-language:    Haskell2010

test-suite hanabi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hanabi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hanabi
